[tool.poetry]
name = "llm-benchmark"
version = "0.1.0"
description = "Multi-provider LLM benchmarking framework"
authors = ["Mahdi Rasouli <mahdi.rasouli78@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
# Main Framework & Core
langchain = "^1.2.7"
langchain-core = "^1.2.7"
langgraph = "^1.0.7"

# Model Integrations
langchain-openai = "^1.1.7"
langchain-google-genai = "^4.2.0"
langchain-qwq = "^0.3.0"

# Infrastructure & Utils
pydantic = "^2.12.5"
pyyaml = "^6.0.3"
python-dotenv = "^1.2.1"

[[tool.poetry.source]]
name = "runflare"
url = "https://mirror-pypi.runflare.com/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
